# playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  address_book.txt  arima.cpp  arima.hpp  bindings.cpp  main.cpp  main.py
cmake/: ProjectOptions.cmake
contracts/: CMakeLists.txt  common.proto  execution.proto  execution_service.proto  gateway.proto  market_data.proto  order.proto  risk.proto  strategy_signal.proto
contracts/proto/: common.proto  execution.proto  gateway.proto  market_data.proto  order.proto  strategy_signal.proto
docs/: promotion-board-template.md
engine-cpp/: CMakeLists.txt
engine-cpp/apps/paper_trader/: CMakeLists.txt  main.cpp
engine-cpp/core/: CMakeLists.txt
engine-cpp/core/include/club/core/: engine.hpp
engine-cpp/core/src/: engine.cpp
engine-cpp/include/trading/core/: order_manager.h  position_keeper.h  trading_engine.h
engine-cpp/include/trading/gateways/: alpaca_fix_gateway.h  paper_trading_gateway.h
engine-cpp/include/trading/grpc/: grpc_server.h
engine-cpp/include/trading/interfaces/: i_execution_gateway.h  i_execution_service_handler.h  i_journal.h  i_order_store.h  i_risk_check.h  i_signal_source.h
engine-cpp/include/trading/persistence/: network_signal_source.h  sqlite_journal.h  sqlite_order_store.h
engine-cpp/include/trading/utils/: order_id_generator.h  order_id_types.h  result.h
engine-cpp/risk/: CMakeLists.txt
engine-cpp/risk/include/club/risk/: risk_engine.hpp
engine-cpp/risk/src/: risk_engine.cpp
engine-cpp/src/: CMakeLists.txt  main.cpp
engine-cpp/src/core/: CMakeLists.txt  order_manager.cpp  position_keeper.cpp  trading_engine.cpp
engine-cpp/src/gateways/: CMakeLists.txt  alpaca_fix_gateway.cpp  paper_trading_gateway.cpp
engine-cpp/src/grpc/: CMakeLists.txt  grpc_server.cpp
engine-cpp/src/observability/: CMakeLists.txt
engine-cpp/src/persistence/: CMakeLists.txt  network_signal_source.cpp  sqlite_journal.cpp  sqlite_order_store.cpp
engine-cpp/src/replay/: CMakeLists.txt
engine-cpp/src/utils/: CMakeLists.txt
engine-cpp/tests/: CMakeLists.txt
engine-cpp/tests/helpers/: proto_builders.h
engine-cpp/tests/mocks/: mock_execution_gateway.h  mock_journal.h  mock_order_store.h
engine-cpp/tests/unit/: test_order_id_mapper.cpp  test_order_manager.cpp  test_position_keeper.cpp  test_sqlite_journal.cpp  test_sqlite_order_store.cpp
proto/: route_guide.proto
python_client/: client.py  requirements.txt
scripts/: generate_protos_python.sh
src/: main.cpp
tests/: CMakeLists.txt  smoke_test.cpp
